# WorkSmart-AI-System

./: .gitignore
ai-service/: debug_test.py  main.py  pyproject.toml  requirements.txt
ai-service/agents/: burnout_predictor_agent.py  observer_agent.py  policy.py  policy_guard_agent.py  workforce_optimizer_agent.py
ai-service/graphs/: conditions.py  sentinel_graph.py
ai-service/state/: agent_state.py
ai-service/tools/: activity_tool.py  system_actions.py  task_tool.py  user_tool.py
backend/: package-lock.json  package.json  server.js
backend/config/: db.js
backend/controllers/: activityController.js  admincontroller.js  analyzeController.js  approvalController.js  authcontroller.js  taskController.js  userController.js
backend/middleware/: authMiddleware.js  internalAuth.js  roleMiddleware.js
backend/models/: ActivityLog.js  ApprovalAction.js  ApprovalRequest.js  RefreshToken.js  Task.js  User.js
backend/routes/: activityRoutes.js  adminRoutes.js  analyzeRoutes.js  approvalRoutes.js  authRoutes.js  taskRoutes.js  userRoutes.js
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: auth.api.js
frontend/src/components/: ActiveTasksTable.jsx  AdminUserTable.jsx  AssignTaskform.jsx  BurnoutAnalysis.jsx  BurnoutReportSection.jsx  CreateUserForm.jsx  ManagerTaskTable.jsx  RoleSelector.jsx  WorkHistoryTable.jsx
frontend/src/pages/: AdminDashboard.jsx  EmployeeDashboard.jsx  Login.jsx  ManagerDashboard.jsx  Register.jsx
frontend/src/routes/: AppRoutes.jsx  ProtectedRoutes.jsx
frontend/src/theme/: theme.js  (+1 more)
(+6 files in other folders)
